<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">이재인의 테스트</string>
    
    <string name="checkbox">체크박스</string>
    <string name="adapter_view">어댑터 뷰</string>
    <string name="grid_view">gridView</string>
    <string name="gallery">Gallery</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">이재인의 App입니다.</string>
	<string name="cake1Desc">케이크</string>
	
	<string name="ok">확인</string>
	<string name="finish">끝</string>
	<string name="close">닫기</string>
	
	<string name="jaein">이재인</string>
	<string name="jaehoon">이재훈</string>
	<string name="jieun">문지은</string>
</resources>
