<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
    </RadioGroup>

    <Button
        android:id="@+id/Button01"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgroup"
        android:onClick="btnMoveCheckBoxPage"
        android:text="@string/checkbox" />
    
    <Button
        android:id="@+id/btnNextPage"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_centerHorizontal="true"
        android:onClick="btnMoveAdapterViewPage"
        android:text="@string/adapter_view" />
    

    <Button
        android:id="@+id/Button02"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rgroup"
        android:layout_alignTop="@+id/btnNextPage"
        android:onClick="btnMoveGridViewPage"
        android:text="@string/grid_view" />

    <Button
        android:id="@+id/Button03"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Button01"
        android:layout_below="@+id/Button01"
        android:layout_marginTop="18dp"
        android:onClick="btnMoveGalleryPage"
        android:text="@string/gallery" />

</RelativeLayout>