<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckBoxActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cake1Desc"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:adjustViewBounds="true"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/cake1Desc"
        android:cropToPadding="false"
        android:maxHeight="200dp"
        android:maxWidth="100dp"
        android:scaleType="fitStart"
        android:src="@drawable/cake1" />

    <Button
        android:id="@+id/btnNextPage"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="btnNextPageOnClick"
        android:text="다음페이지" />

        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnNextPage"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_marginBottom="48dp"
            android:text="@string/jaehoon" />

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/chk2"
            android:layout_alignLeft="@+id/chk2"
            android:layout_marginBottom="14dp"
            android:text="@string/jaein" />

        <CheckBox
            android:id="@+id/chk3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnNextPage"
            android:layout_alignLeft="@+id/chk2"
            android:text="@string/jieun" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/chk3"
            android:layout_alignTop="@+id/btnNextPage"
            android:text="@string/ok"
            android:onClick="btnOKOnClick" />

</RelativeLayout>